# node-based-image-processor

./: CMakeLists.txt  README.md
src/: gui.cpp  main.cpp  old_main.cpp
